[package]
name = "proxy-site"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.13"
lazy_static = "1.4.0"
lol_html = "0.3.1"
regex = "1.6.0"
reqwest = { version = "0.11.11", features = ["stream"] }
tokio = { version = "1.20.1", features = ["full"] }
